welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: '(' expected but identifier found.
    if estBiscuit() {
       ^Program:11: error: illegal start of simple expression
  }
  ^